# anabasis

./: docker-compose.yaml
anabasis/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
anabasis-server/: Dockerfile  README.md  pyproject.toml
anabasis-server/src/: main.py
anabasis/src/: App.css  App.jsx  index.css  main.jsx
anabasis/src/components/: admin.jsx  calendarselector.css  calendarselector.jsx  planner.css  planner.jsx
anabasis/src/components/calendar/: calendar.jsx
anabasis/src/components/classselect/: classselect.css  classselect.jsx
anabasis/src/components/pto/: pto.jsx
anabasis/src/components/serverselect/: serverselect.jsx
traefik/: .gitignore  traefik.yaml
